add field providerCode for response of import rq detail